# rustasp

./: .dockerignore  .env.example  .gitignore  1.md  CLAUDE.md  Cargo.toml  Dockerfile  ERROR_ANALYSIS.md  README.md  SESSION_COMPLETE.md  SESSION_IMPLEMENTATION_SUMMARY.md  dockerhub.md  设计缺陷.md
.github/workflows/: build.yml
docs/: Dictionary.md  Pratt Parser 设计说明（适用于 Rust 解释器）.md  Server.CreateObject白名单说明.md  VBScript Engine Architecture (Rust).md  VBScript内置函数列表.md  VBScript内置常量.md  build.md  vbscript_functions.md  vbs内置函数.md  一、当前代码的主要问题.md  父路径安全处理方案.md  运行时现代内建对象设计.md
docs/session/: session-test.md  session.md  session_storage.md
docs/对象/: Request.md  Response.md  vbs_对象.md  vbs_过程.md
docs/架构设计/: README.md  Token_Key_识别方案.md  新旧方案对比.md
runtime/sessions/: CLAUDE.md
src/: lib.rs  main.rs
src/asp/: engine.rs  include.rs  mod.rs  segmenter.rs  simple_engine.rs
src/asp/engine/: error.rs  executor.rs  mod.rs
src/ast/: expr.rs  mod.rs  op.rs  program.rs  stmt.rs
src/builtins/: mod.rs  request.rs  response.rs  server.rs  session.rs  session_manager.rs  session_store.rs
src/http/: error_page.rs  handler.rs  mod.rs  path_resolver.rs  request_context.rs  router.rs  state.rs
src/lib/asp_host/: Cargo.toml
src/lib/asp_runtime/: Cargo.toml
src/lib/db_adapter/: Cargo.toml
src/lib/vbscript_ast/: Cargo.toml
src/lib/vbscript_core/: Cargo.toml
src/parser/: class_parser.rs  error.rs  expr.rs  expr_parser.rs  keyword.rs  lexer.rs  mod.rs  parser.rs  program.rs  stmt.rs  stmt_parser.rs
src/parser/expr/: infix.rs  mod.rs  postfix.rs  pratt.rs  prefix.rs
src/parser/lexer/: keyword.rs  lexer.rs  mod.rs  scan.rs  token.rs
src/parser/stmt/: assign_stmt.rs  core.rs  decl_stmt.rs  if_stmt.rs  loop_stmt.rs  mod.rs  proc_stmt.rs  select_stmt.rs  with_stmt.rs
src/parser/stmt_parser/: control.rs  core.rs  declarations.rs  helpers.rs  mod.rs  procedures.rs
src/runtime/: class.rs  context.rs  err_object.rs  error.rs  error_mode.rs  interpreter.rs  mod.rs  scope.rs
src/runtime/builtins/: executors.rs  mod.rs  registry.rs  tests.rs  token.rs
src/runtime/interpreter/: builtin_tokens.rs  builtins.rs  exprs.rs  mod.rs  stmts.rs
src/runtime/objects/: dictionary.rs  factory.rs  filesystemobject.rs  mod.rs  request.rs  response.rs  server.rs  session.rs  session_manager.rs  xmlhttp.rs
src/runtime/value/: array.rs  compare.rs  conversion.rs  display.rs  index.rs  mod.rs  operators.rs  value.rs
src/utils/: mod.rs  vbscript.rs
test/: CLAUDE.md
www/: index.asp
www/test/: footer.asp  header.asp  test_001_simple_output.asp  test_002_html_mix.asp  test_003_dim.asp  test_004_undefined.asp  test_005_if.asp  test_006_select.asp  test_007_for.asp  test_008_while.asp  test_009_function.asp  test_010_sub.asp  test_011_string_concat.asp  test_012_string_functions.asp  test_013_math_basic.asp  test_014_math_functions.asp  test_015_array_static.asp  test_016_array_dynamic.asp  test_017_include_file.asp  test_018_include_virtual.asp  test_019_querystring.asp  test_020_form.asp  test_021_error_handler.asp  test_022_no_parens.asp  test_023_simple_no_parens.asp  test_024_debug_functions.asp  test_025_simple_abs.asp  测试用例.md
www/test/class_fun_sub_test/: CLAUDE.md  test_call.asp  test_function.asp  test_params.asp  test_sub.asp
(+47 files in other folders)
