[package]
name = "vbscript"
version = "0.1.0"
edition = "2021"
default-run = "vbscript"

[lib]
name = "vbscript"
path = "src/lib.rs"

[[bin]]
name = "vbscript"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# Web 框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

# 序列化
serde = { version = "1", features = ["derive"] }

# 配置
dotenv = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"

# 错误处理
thiserror = "1"
anyhow = "1"

# MIME 类型
mime_guess = "2"

# URL 编码
urlencoding = "2"

# HTML 转义
html-escape = "0.2"
