[package]
name = "asp_host"
version = "0.1.0"
edition = "2021"

[dependencies]
vbscript_core = { path = "../vbscript_core" }
asp_runtime = { path = "../asp_runtime" }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
